# cs348-project

./: README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: auth.rs  errors.rs  main.rs  models.rs
backend/src/routes/: auth.rs  users.rs
backend/src/services/: auth.rs  input.rs  mod.rs  users.rs
db/: init.sql
frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.svelte
frontend/src/lib/: Auth.svelte  UserFormDialog.svelte  Users.svelte  api.ts
